add cloudinary + mark resposne

--- a/.env
+++ b/.env
@@ -2,3 +2,7 @@ DB_URI=mongodb://localhost:27017/project3-backend
 
 JWT_SECRET=henrynguyen13
 JWT_EXPIRES=3d
+
+CLOUDINARY_NAME=dxvypna3d
+CLOUDINARY_API_KEY=579567899251729
+CLOUDINARY_API_SECRET=cBTLRfBuXNVM-Az1g_5PcF_d3cw
