--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@google-cloud/storage": "^7.7.0",
     "@nestjs/axios": "^3.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
@@ -30,8 +31,12 @@
     "@nestjs/platform-express": "^10.0.0",
     "axios": "^1.6.0",
     "bcryptjs": "^2.4.3",
+    "buffer-to-stream": "^1.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "cloudinary": "^1.41.0",
+    "firebase": "^10.7.1",
+    "firebase-admin": "^11.11.1",
     "mongoose": "^7.6.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
@@ -43,9 +48,11 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/buffer-to-stream": "^1.0.3",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^3.0.10",
     "@types/passport-local": "^1.0.36",
