--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.1.1",
+    "@nestjs/mapped-types": "*",
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.3.0",
+    "@nestjs/websockets": "^10.3.0",
     "axios": "^1.6.0",
     "bcryptjs": "^2.4.3",
     "buffer-to-stream": "^1.0.0",
